@@ -153,7 +153,7 @@ export(linelist2sts)
 # generics for sts class defined in sts.R
 exportMethods("[", plot)
 exportMethods(toLatex)
-exportMethods(nrow, ncol, dim, colnames, epochInYear, year)
+exportMethods(dim, dimnames, epochInYear, year)
 exportMethods(aggregate)
 exportMethods(as.data.frame)
 
